
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct _cms_typehandler_struct {int dummy; } ;
typedef int cmsHANDLE ;
typedef int cmsContext ;


 int cmsDictFree (int ,int ) ;
 int cmsUNUSED_PARAMETER (struct _cms_typehandler_struct*) ;

__attribute__((used)) static
void Type_Dictionary_Free(cmsContext ContextID, struct _cms_typehandler_struct* self, void* Ptr)
{
    cmsDictFree(ContextID, (cmsHANDLE) Ptr);
    cmsUNUSED_PARAMETER(self);
}
