; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_Dictionary_Free.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/src/extr_cmstypes.c_Type_Dictionary_Free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._cms_typehandler_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct._cms_typehandler_struct*, i8*)* @Type_Dictionary_Free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Type_Dictionary_Free(i32 %0, %struct._cms_typehandler_struct* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct._cms_typehandler_struct*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store %struct._cms_typehandler_struct* %1, %struct._cms_typehandler_struct** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i8*, i8** %6, align 8
  %9 = ptrtoint i8* %8 to i32
  %10 = call i32 @cmsDictFree(i32 %7, i32 %9)
  %11 = load %struct._cms_typehandler_struct*, %struct._cms_typehandler_struct** %5, align 8
  %12 = call i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct* %11)
  ret void
}

declare dso_local i32 @cmsDictFree(i32, i32) #1

declare dso_local i32 @cmsUNUSED_PARAMETER(%struct._cms_typehandler_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
